ctm-sf-homeloan-app/main/default/objects/HLASubmittedToAFG__e/HLASubmittedToAFG__e.object-meta.xml
<CustomObject>
    <label>HLA Submitted To AFG</label>
    <pluralLabel>HLA Submitted To AFG</pluralLabel>
</CustomObject>