ctm-sf-homeloan-app/main/default/objects/HLASubmittedToAFG__e/fields/AfgId__c.field-meta.xml
<CustomField>
    <fullName>AfgId__c</fullName>
    <label>AfgId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>