ctm-sf-homeloan-app/main/default/objects/HLASubmittedToAFG__e/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <label>ApplicationId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>