ctm-sf-homeloan-app/main/default/objects/HLASubmittedToAFG__e/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>