ctm-sf-homeloan-app/main/default/objects/HLASubmittedToAFG__e/fields/SubmittedReturnValue__c.field-meta.xml
<CustomField>
    <fullName>SubmittedReturnValue__c</fullName>
    <label>Submitted Return Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>